# ros_robotics

bulls_bot/: CMakeLists.txt
bulls_bot/launch/: description_test.launch.xml
bulls_bot/urdf/: bulls.urdf  bulls.urdf.xacro
bulls_gazebo/: CMakeLists.txt  package.xml
bulls_gazebo/launch/: spawn_robot.launch.xml  start_simulator.launch.xml
bulls_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bulls_moveit_config/config/: bulls_bot.srdf  joint_limits.yaml
bulls_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/bulls_bot/: CMakeLists.txt
src/bulls_bot/launch/: description_test.launch.xml
src/bulls_bot/urdf/: bulls.urdf
src/install/: setup.sh
src/install/bulls_bot/share/ament_index/resource_index/package_run_dependencies/: bulls_bot
src/install/bulls_bot/share/ament_index/resource_index/parent_prefix_path/: bulls_bot
src/install/bulls_bot/share/bulls_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/bulls_bot/share/bulls_bot/cmake/: bulls_botConfig-version.cmake  bulls_botConfig.cmake
src/install/bulls_bot/share/bulls_bot/environment/: ament_prefix_path.dsv  path.dsv
src/log/: latest_build
